Improve performance a bit

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -7,6 +7,9 @@ html
     meta(name="author",content="Labi Kyo<mailto:labikyo@gmail.com>")
     link(href="css/main.css",rel="stylesheet")
   body
+    a#start(href="#") Start
+    a#stop(href="#") Stop
+    a#next(href="#") Next
     script(src="js/jquery-1.7.1.min.js")
     script(src="js/underscore-min.js")
     script(src="js/main.js")
